<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoviesActivity">

    <LinearLayout
        android:layout_width="297dp"
        android:layout_height="531dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205">

        <EditText
            android:id="@+id/editText_MovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/movie_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_MoiveDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/movie_description"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button_AddMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_movie" />

        <Button
            android:id="@+id/button_ShowMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_movies" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>