<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyConverterActivity">

    <LinearLayout
        android:layout_width="287dp"
        android:layout_height="398dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/editTextNumber_ValueFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/choose_currency_from_text"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextNumber_ValueTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/choose_currency_to_text"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/button_Convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_button"
            app:strokeColor="#FFFFFF" />

        <Button
            android:id="@+id/button_Clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>